name:                stock-common
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stock-common#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Becich
maintainer:          peterbecich@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stock-common
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     Types.Tick
