name:                stock-common
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stock-common#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Becich
maintainer:          peterbecich@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DB.Psql
                     , DB.Redis
                     , Types.Tick
                     , Types.Tick.Psql
                     , Types.Stock
                     , Types.Stock.Psql
                     , Types.Stock.Redis
                     , Types.Exchange
                     , Types.Exchange.Psql
  build-depends:       base >= 4.7 && < 5
                     , time
                     , opaleye
                     , postgresql-simple >= 0.5.0.0
                     , text
                     , containers
                     , product-profunctors
                     , uuid
                     , aeson
                     , yaml-config >= 0.4.0
                     , cassava
                     , vector
                     , bytestring
                     , random
                     , hedis
                     , network
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/peterbecich/stock-common
